<resources>
    <string name="app_name">PriceCompare</string>
    <string name="action_settings">Settings</string>
    <string name="homeScreenWelcomeMessage">This is a price comparison app. Enter the values and click Calculate Price. The results will appear below.</string>
    <string name="clearButtonText">Clear</string>
    <string name="itemDescriptionInputHint">Item Description</string>
    <string name="itemPriceInputHint">Item Price</string>
    <string name="numberOfUnitsInputHint">Number of Units</string>
    <string name="typeOfUnitsInputHint">Type of Units</string>
    <string name="calculatePriceButtonText">Calculate Price</string>
    <string-array name="typeOfUnitsChoicesArray">
        <item>unit</item>
        <item>pound</item>
        <item>ounce</item>
        <item>gram</item>
        <item>roll</item>
        <item>package</item>
        <item>can</item>
        <item>bag</item>
    </string-array>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="delete_database">Erase all Price Comparisons?</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_screen_text">com.ranma2913.pricecompare</string>
    <string name="title_activity_enter_item">EnterItemActivity</string>
    <string name="addNewItemButtonText">Add New Item</string>
    <string name="itemStoreInputHint">Store Name</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="poweredByGoogleText">Powerd By Google</string>
    <string name="splashScreenLogo">Splash Screen Logo</string>
</resources>
