<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.ranma2913.pricecompare.activities.EnterItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/homeScreenWelcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeScreenWelcomeMessage"
            android:textSize="@dimen/homeScreenWelcomeMessageTextSize"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/itemStoreInput"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="@string/itemStoreInputHint"
                android:inputType="textCapWords|textAutoComplete|textAutoCorrect"
                android:textIsSelectable="true"
                android:textSize="@dimen/inputTextSize"/>

            <EditText
                android:id="@+id/itemDescriptionInput"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="@string/itemDescriptionInputHint"
                android:inputType="textCapWords|textAutoComplete|textAutoCorrect"
                android:textIsSelectable="true"
                android:textSize="@dimen/inputTextSize"/>

            <EditText
                android:id="@+id/itemPriceInput"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/itemPriceInputHint"
                android:inputType="numberDecimal"
                android:textSize="@dimen/inputTextSize"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/numberOfUnitsInput"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/numberOfUnitsInputHint"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/inputTextSize"/>

                <Spinner
                    android:id="@+id/typeOfUnitsInput"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/typeOfUnitsInputHint"
                    android:inputType="textCapWords|textAutoComplete|textAutoCorrect"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/calculatePriceButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/calculatePriceButtonText"
                android:textSize="@dimen/buttonTextSize"/>

            <Button
                android:id="@+id/clearButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/clearButtonText"
                android:textSize="@dimen/buttonTextSize"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
